@@ -264,9 +264,11 @@ public class XmlModuleDescriptorParserTest extends AbstractModuleDescriptorParse
         dd = getDependency(dependencies, "yourmodule1");
         assertNotNull(dd);
         assertEquals("yourorg", dd.getDependencyId().getOrganisation());
+        assertEquals("trunk", dd.getDependencyRevisionId().getBranch());
         assertEquals("1.1", dd.getDependencyRevisionId().getRevision());
+        assertEquals("branch1", dd.getDynamicConstraintDependencyRevisionId().getBranch());
         assertEquals("1+", dd.getDynamicConstraintDependencyRevisionId().getRevision());
-        assertEquals("yourorg#yourmodule1;1+", dd.getDynamicConstraintDependencyRevisionId().toString());
+        assertEquals("yourorg#yourmodule1#branch1;1+", dd.getDynamicConstraintDependencyRevisionId().toString());
         
         assertEquals(Arrays.asList(new String[] {"myconf1"}), Arrays.asList(dd
                 .getModuleConfigurations()));
